# todoist-sync

./: .gitignore  pyproject.toml
src/todoist_sync/: config.py  main.py  program.py  program_test.py  todoist_api.py
tests/: test_config.py
