[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "todoist_sync"
version = "0.1.0"
description = "Some scripts to sync my needs with todoist"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

# Dependency definitions for your project
[tool.poetry.dependencies]
python = "^3.12"
# List your project's dependencies here
# For example, if your project depends on requests and todoist-python, you might add:
requests = "*"
todoist-python = "*"

# Development dependencies (such as linters, testing frameworks, etc.)
[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

# If your package is meant to provide command-line executables, configure them like so:
[tool.poetry.scripts]
my-project-cli = "todoist_sync.main:main"  # Adjust the module path and function as needed

# Optional dependencies can be configured as extras for optional features
[tool.poetry.extras]
gui = ["PyQt5"]
cli = ["click", "rich"]

[tool.poetry.urls]
Homepage = "https://example.com"
Repository = "https://github.com/yourusername/my-project.git"
Documentation = "https://readthedocs.org/projects/my-project/"

